# CRMconnector

./: .gitignore  AgentCode.py  README.md  docker-compose.yaml  pyproject.toml
.aitk/: mcp.json
app/: main.py  models.py  redis_connector.py  websocket_handler.py
app/routers/: route.py
app/static/: index.html
evaluation/: README.md  README_SCRIPTS.md  USAGE_GUIDE.md  analyze_and_improve.py  collect_repsonses.py  common.py  evaluate_agent.py  generate_test_data.py  quick_test.py  simple_analyze.py
evaluation/data/: .gitkeep  quick_test_20251230_124809.json  responses_20251230_150857.jsonl
evaluation/reports/: .gitkeep  evaluation_report_20251230_125112.json
inspector/: .inspector.json  package.json
scripts/: generate_trace.py
src/: agent_manager.py  agent_maneger.py  redis_context_manager.py  server.py
